@@ -1,0 +1,5 @@
+# $Id: show_plugins.rb,v 1.1 2005-11-03 07:50:40 yanagita Exp $
+# Copyright (C) 2005 Kouhei Yanagita <yanagi@shakenbu.org>
+
+export_plugin_methods(:show_plugins)
+
